<resources>
    <string name="app_name">UserApp</string>
    <string name="register">REGISTER</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="age">Age</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register_button">Register</string>
</resources>